<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/SettingsActivity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FCF8FB"
    tools:context="activity.SettingsActivity">

<!--    <TextView-->
<!--        android:id="@+id/displayUsernameTextView"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:layout_height="wrap_content"-->
<!--        android:layout_centerInParent="true"-->
<!--        android:text=""-->
<!--        android:visibility="gone"-->
<!--        tools:ignore="MissingConstraints" />-->

    <TextView
        android:id="@+id/textView4"
        android:layout_width="411dp"
        android:layout_height="65dp"
        android:layout_marginBottom="212dp"
        android:background="#9E3A46"
        android:gravity="center"
        android:text="Settings"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/saveUserSettingsButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="33dp"
        android:layout_height="20dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="11dp"
        android:adjustViewBounds="false"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#03A8F2"
        android:backgroundTintMode="src_in"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/back"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.079"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.55"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/UsernameTextView"
        android:layout_width="101dp"
        android:layout_height="31dp"
        android:layout_marginTop="116dp"
        android:gravity="left"
        android:text="@string/username"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:guidelineUseRtl="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.154"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4" />


    <EditText
        android:id="@+id/UsernameEditText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:ems="10"
        android:hint="@string/enter_your_username"
        android:inputType="text"
        android:textColor="@color/black"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.248"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/UsernameTextView" />

    <Button
        android:id="@+id/saveUserSettingsButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#BA0F0F"
        android:text="@string/save"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.492"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.478"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/CurrentUsernameTextView"
        android:layout_width="227dp"
        android:layout_height="35dp"
        android:layout_marginTop="33dp"
        android:layout_marginBottom="48dp"
        android:text="@string/current_username"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/UsernameTextView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.271"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


</androidx.constraintlayout.widget.ConstraintLayout>