<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#EFE3E3"
    tools:context="activity.TaskDetailActivity">


    <Button
        android:id="@+id/taskDetailsDescriptionTextToSpeech"
        android:layout_width="162dp"
        android:layout_height="51dp"
        android:layout_marginBottom="26dp"
        android:backgroundTint="#BA0F0F"
        android:text="Text To Speech"
        android:textColor="#FFFFFF"
        app:layout_constraintBottom_toTopOf="@+id/taskDetailsImageView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.527"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.97"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/taskLocationTextView"
        android:layout_width="388dp"
        android:layout_height="42dp"
        android:layout_marginTop="16dp"
        android:text="Location"
        android:textColor="#910B0B"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.304"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/taskDetailsImageView" />

    <TextView
        android:id="@+id/TeamTextView"
        android:layout_width="160dp"
        android:layout_height="42dp"
        android:layout_marginTop="19dp"
        android:text="Team"
        android:textColor="#910B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskStateTextView" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="409dp"
        android:layout_height="65dp"
        android:background="#9E3A46"
        android:gravity="center"
        android:text="Task Details"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        tools:ignore="MissingConstraints" />


    /////////////////////////////////


    <ImageButton
        android:id="@+id/backButton"
        android:layout_width="56dp"
        android:layout_height="35dp"
        android:layout_marginTop="14dp"
        android:layout_marginBottom="11dp"
        android:adjustViewBounds="false"
        android:background="?attr/selectableItemBackground"
        android:backgroundTint="#03A8F2"
        android:backgroundTintMode="src_in"
        android:baselineAlignBottom="false"
        android:contentDescription="@string/backButton"
        app:layout_constraintBottom_toBottomOf="@+id/textView4"
        app:layout_constraintEnd_toEndOf="@+id/textView4"
        app:layout_constraintHorizontal_bias="0.044"
        app:layout_constraintStart_toStartOf="@+id/textView4"
        app:layout_constraintTop_toTopOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.523"
        app:srcCompat="@android:drawable/ic_menu_revert"
        tools:ignore="MissingConstraints" />


    <TextView
        android:id="@+id/TaskTitleTextView"
        android:layout_width="169dp"
        android:layout_height="34dp"
        android:layout_marginTop="12dp"
        android:gravity="center"
        android:text="@string/task_title"
        android:textColor="#000000"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/TaskDetailDescription"
        android:layout_width="361dp"
        android:layout_height="98dp"
        android:layout_marginTop="12dp"
        android:text="@string/lorem_ipsum_description"
        android:textColor="#000000"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/DescriptionWordTextView"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/DescriptionWordTextView"
        android:layout_width="160dp"
        android:layout_height="37dp"
        android:layout_marginTop="20dp"
        android:text="Description"
        android:textColor="#910B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.1"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TeamTextView" />

    <TextView
        android:id="@+id/TaskStateTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Task State: "
        android:textColor="#910B0B"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.088"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188" />

    <ImageView
        android:id="@+id/taskDetailsImageView"
        android:layout_width="284dp"
        android:layout_height="115dp"
        android:layout_marginTop="19dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.59"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/TaskDetailDescription"
        app:layout_constraintVertical_bias="0.489"
        tools:ignore="MissingConstraints"
        tools:srcCompat="@tools:sample/avatars" />


</androidx.constraintlayout.widget.ConstraintLayout>